# mcp-st-client

./: log.txt  mcp_deepseek_client.py  notes.txt  pyproject.toml  render.yaml  requirements.txt  servers old2.yaml  servers.yaml  streamlit_mcp_app (another copy).py  streamlit_mcp_app (copy).py  streamlit_mcp_app copy.py  streamlit_mcp_app.py
servers/: crypto.py  example_filesystem_server.py  other_inputs.py  screenshot.py  websearch.py
