[project]
name = "deepseek-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "fastmcp>=3.2.4",
    "googlesearch-python>=1.3.0",
    "mcp>=1.27.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.56.0",
]
